deployment/kubernetes/openhabcloud_mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: openhab-cloud
  labels:
    org.openhab.cloud.service: mongodb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      org.openhab.cloud.service: mongodb
  template:
    metadata:
      labels:
        org.openhab.cloud.service: mongodb
    spec:
      containers:
        - args:
            - mongod
            - --smallfiles
            - --bind_ip_all
          image: bitnami/mongodb:4.0.21
          name: mongodb
          ports:
            - containerPort: 27017
          resources: { }
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-empty0
            - mountPath: /data/configdb
              name: mongodb-empty1
      restartPolicy: Always
      volumes:
        - emptyDir: { }
          name: mongodb-empty0
        - emptyDir: { }
          name: mongodb-empty1
