deployment/kubernetes/openhabcloud_app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-1
  namespace: openhab-cloud
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    org.openhab.cloud.service: app-1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: openhab-cloud
spec:
  type: NodePort
  ports:
    - name: https-port
      port: 443
      targetPort: 8443
      nodePort: 32111
  selector:
    org.openhab.cloud.service: app-1
