deployment/kubernetes/openhabcloud_loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-service-openhab-nginx
  namespace: openhab-cloud
spec:
  type: LoadBalancer
  selector:
    org.openhab.cloud.service: nginx
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8081
    - protocol: TCP
      name: https
      port: 443
      targetPort: 8443
