deployment/kubernetes/openhabcloud_mongodb_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: openhab-cloud
  labels:
    org.openhab.cloud.service: mongodb
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    org.openhab.cloud.service: mongodb
