deployment/kubernetes/openhabcloud_redis_service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: openhab-cloud
  labels:
    org.openhab.cloud.service: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    org.openhab.cloud.service: redis
